fix dedicated threading fetch profile to avoid parsing all content_info during thread refs add rest api to obtain a full list of ids of all folders tree
